# Neural-Networks-from-Scratch

./: .clang-format  .gitignore  .gitmodules  ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  EigenProxy.h  Except.cpp  Except.h  Layer.cpp  Layer.h  LearningRate.cpp  LearningRate.h  Network.cpp  Network.h  Penalty.cpp  Penalty.h  README.md  Rand.cpp  Rand.h  Sigma.cpp  Sigma.h  Sigmoid.cpp  Sigmoid.h  main.cpp  test_mnist.cpp  tests.cpp  tests.h  usings.h
